# connaxio-idf

./: .gitignore  .project  README.md  component.cmake
components/Peripheral/: CMakeLists.txt  CapacitiveMoistureSensor.cpp  DS18B20_UART.cpp  SHTC3.cpp
components/Peripheral/include/: CapacitiveMoistureSensor.hpp  DS18B20_UART.hpp  SHTC3.hpp
components/ThreadSafeDriver/: .cproject  .project  CMakeLists.txt  I2CThreadSafeDriver.cpp  OneWireUARTThreadSafeDriver.cpp  UARTThreadSafeDriver.cpp
components/ThreadSafeDriver/include/: I2CThreadSafeDriver.hpp  OneWireUARTThreadSafeDriver.hpp  UARTThreadSafeDriver.hpp
components/deprecated/hardware_descriptor/: OneWireUARTDescriptor.cpp
components/deprecated/peripheral/: ADS1119.cpp  ActuatorSwitch.cpp  DACx0501.cpp  Peripheral.cpp  Sensor.cpp  SensorSwitch.cpp
components/hardware_descriptor/: .cproject  .project  ADCDescriptor.cpp  CMakeLists.txt  HardwareDescriptor.cpp  I2CDescriptor.cpp  OneWireUARTDescriptor.cpp  PWMDescriptor.cpp
components/hardware_descriptor/include/: ADCDescriptor.hpp  HardwareDescriptor.hpp  I2CDescriptor.hpp  OneWireUARTDescriptor.hpp
components/peripheral/: .cproject  .project  ADS1119.cpp  CMakeLists.txt  CSMS12.cpp  DACx0501.cpp  DS18B20.cpp  SHTC3.cpp  Servo.cpp
components/peripheral/include/: Actuator.hpp  ActuatorSwitch.hpp  CSMS12.hpp  DACx0501.hpp  DS18B20.hpp  Peripheral.hpp  SensorSwitch.hpp  Servo.hpp
examples/peripheral/CapacitiveMoistureSensor/: CMakeLists.txt
examples/peripheral/DS18B20/main/: CMakeLists.txt  ds18b20_example_main.cpp
(+16 files in other folders)
